<resources>
    <string name="app_name">Github User</string>
    <string name="user_name">Nama User</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="DetailName">Contoh Nama</string>
    <string name="DetailLabel">Detail Activity</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="username_twt">username</string>
    <string name="label_fav">Favourite Page</string>
    <string name="favourite_page">Favourite Page</string>
    <string name="setting">Setting</string>
    <string name="theme_swt_act">Theme Switch</string>
    <string name="currency_converter">Currency Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_convertertv">Currency Converter</string>
    <string name="hint">Amount</string>
    <string name="kesan_pesan">Kesan Pesan : Matakuliah yang sangat membantu pekerjaan masa depan saya</string>
    <string-array name="currencies_array">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <!-- Add more currencies as needed -->
    </string-array>
    <string name="silahkan_login">Silahkan Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="login">Masuk</string>
    <string name="_2023_haidarrachman">2023 Haidarrachman</string>
    <string name="daftar">Signup</string>
    <string name="filldata">Fill your data below here</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="time_converter">Time Converter</string>
</resources>